# backend/openapi.json
@@ -379,6 +379,7 @@
         "examples": [
           {
             "created_at": "2026-09-04T04:00:00Z",
+            "deduplicated": false,
             "filename": "Inspection_Report_Rev-A.pdf",
             "id": "ed846165-102f-49f9-9fd0-f25c0d4cfe6e",
             "status": "QUEUED"
@@ -389,6 +390,11 @@
             "format": "date-time",
             "title": "Created At",
             "type": "string"
+          },
+          "deduplicated": {
+            "default": false,
+            "title": "Deduplicated",
+            "type": "boolean"
           },
           "filename": {
             "title": "Filename",
@@ -1788,6 +1794,16 @@
           "required": true
         },
         "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DocumentUploadResponse"
+                }
+              }
+            },
+            "description": "OK"
+          },
           "201": {
             "content": {
               "application/json": {
